add_subdirectory( GkgBundleForRaissa )
add_subdirectory( GkgDwiPdfFieldDiffeomorphicRegistration )
add_subdirectory( GkgTestAimsBundleMapDiskFormat01 )
add_subdirectory( GkgTestBundleMapDiskFormat01 )
add_subdirectory( GkgTestCanonicalWatson )
add_subdirectory( GkgTestDiffusionSpectrumImaging )
add_subdirectory( GkgTestDiffusoid01 )
add_subdirectory( GkgTestDiffusoid02 )
add_subdirectory( GkgTestDtiTKToTensor )
add_subdirectory( GkgTestDwiConnectivityMatrix )
add_subdirectory( GkgTestNoddiModel01 )
add_subdirectory( GkgTestPGSEAxonCalibration01 )
add_subdirectory( GkgTestProbabilisticSampling )
add_subdirectory( GkgTestRicianFitWithSumOfGaussiansLM )
add_subdirectory( GkgTestTensorReaderWriter01 )
add_subdirectory( GkgTestTwoPoolModel01 )
add_subdirectory( GkgTestTwoPoolModel02 )
