add_subdirectory( GkgTestAALTemplate2T2Transformation01 )
add_subdirectory( GkgTestAffineTransform3d01 )
add_subdirectory( GkgTestAffineWoShearingTransform3d01 )
add_subdirectory( GkgTestAkimaSpline3d01 )
add_subdirectory( GkgTestApodization01 )
add_subdirectory( GkgTestAutoMemoryMappedVector01 )
add_subdirectory( GkgTestAutoMemoryMappedVector02 )
add_subdirectory( GkgTestAverageMedian01 )
add_subdirectory( GkgTestBesselFunctions01 )
add_subdirectory( GkgTestCartesianVoxelSampler01 )
add_subdirectory( GkgTestComplexResampling01 )
add_subdirectory( GkgTestConverterRescaler01 )
add_subdirectory( GkgTestConvexQuadraticProgrammingSolver01 )
add_subdirectory( GkgTestCplxConverter01 )
add_subdirectory( GkgTestCubicSpline3d01 )
add_subdirectory( GkgTestCurve3d01 )
add_subdirectory( GkgTestCVectorImagPart01 )
add_subdirectory( GkgTestCVectorRealPart01 )
add_subdirectory( GkgTestCylinderCollision3d01 )
add_subdirectory( GkgTestDicomStorageUnit01 )
add_subdirectory( GkgTestDiskFormatAnalyzer01 )
add_subdirectory( GkgTestDistanceMap01 )
add_subdirectory( GkgTestEigenSystem01 )
add_subdirectory( GkgTestFFT01 )
add_subdirectory( GkgTestFletcherReevesConjugateGradientOptimizer01 )
add_subdirectory( GkgTestFrame01 )
add_subdirectory( GkgTestGaussianNoiseRemoval01 )
add_subdirectory( GkgTestGis01 )
add_subdirectory( GkgTestGisPartialRead01 )
add_subdirectory( GkgTestGisPartialWrite01 )
add_subdirectory( GkgTestHDBSCAN01 )
add_subdirectory( GkgTestHeader01 )
add_subdirectory( GkgTestImageRotation01 )
add_subdirectory( GkgTestIO01 )
add_subdirectory( GkgTestLargeSparseMatrixReaderWriter01 )
add_subdirectory( GkgTestLevenbergMarquardt01 )
add_subdirectory( GkgTestLevenbergMarquardt02 )
add_subdirectory( GkgTestMatrixDeterminant01 )
add_subdirectory( GkgTestMatrixPower01 )
add_subdirectory( GkgTestMatrixVectorReaderWriter01 )
add_subdirectory( GkgTestMaurerDistanceMap01 )
add_subdirectory( GkgTestMeshMap01 )
add_subdirectory( GkgTestMinMaxFilter01 )
add_subdirectory( GkgTestModelToWorldTransform3d01 )
add_subdirectory( GkgTestMoorePenrosePseudoInverse01 )
add_subdirectory( GkgTestMonteCarloMarkovChain01 )
add_subdirectory( GkgTestNeighborhood3d01 )
add_subdirectory( GkgTestNelderMeadSimplexOptimizer01 )
add_subdirectory( GkgTestNLM01 )
add_subdirectory( GkgTestNonCentralChiFitWithGaussianMixture01 )
add_subdirectory( GkgTestNonCentralChiFunction01 )
add_subdirectory( GkgTestNonLinearProgrammingOptimizer01 )
add_subdirectory( GkgTestNonLinearProgrammingOptimizer02 )
add_subdirectory( GkgTestNonSymmetricEigenSystem01 )
add_subdirectory( GkgTestNumericalAnalysis01 )
add_subdirectory( GkgTestOrientationSet01 )
add_subdirectory( GkgTestParameterizedTransform3d01 )
add_subdirectory( GkgTestPhantomForWatershed01 )
add_subdirectory( GkgTestPlotter01 )
add_subdirectory( GkgTestPolygonMap01 )
add_subdirectory( GkgTestPolyhedron01 )
add_subdirectory( GkgTestPolyhedron02 )
add_subdirectory( GkgTestPolyhedron03 )
add_subdirectory( GkgTestPolynomialRoots01 )
add_subdirectory( GkgTestPowellNewUOAConstrainedOptimizer01 )
add_subdirectory( GkgTestPowellNewUOAOptimizer01 )
add_subdirectory( GkgTestPowerOfTwo01 )
add_subdirectory( GkgTestPVResampler01 )
add_subdirectory( GkgTestRandomIndexVector01 )
add_subdirectory( GkgTestRandomNumber01 )
add_subdirectory( GkgTestRandomTriederFromFirstAxis01 )
add_subdirectory( GkgTestRCPointerVolume01 )
add_subdirectory( GkgTestReaderWriter01 )
add_subdirectory( GkgTestRegularBesselFunctionJ0 )
add_subdirectory( GkgTestRiceFunction01 )
add_subdirectory( GkgTestRicianFitWithGaussianMixture01 )
add_subdirectory( GkgTestRotation3dFunctions01 )
add_subdirectory( GkgTestSimulatedAnnealingOptimizer01 )
add_subdirectory( GkgTestSiteMap01 )
add_subdirectory( GkgTestSiteMapFactory01 )
add_subdirectory( GkgTestSparseMatrixReaderWriter01 )
add_subdirectory( GkgTestSparseMatrixSplitter )
add_subdirectory( GkgTestSplineResampler01 )
add_subdirectory( GkgTestSpreader01 )
add_subdirectory( GkgTestSubVolume01 )
add_subdirectory( GkgTestTalairachTransform3d01 )
add_subdirectory( GkgTestTextureMap01 )
add_subdirectory( GkgTestTopologyClassifier01 )
add_subdirectory( GkgTestTopologyClassifierStride201 )
add_subdirectory( GkgTestTransform3d01 )
add_subdirectory( GkgTestTransform3d02 )
add_subdirectory( GkgTestVolume01 )
add_subdirectory( GkgTestWatershedVolume01 )
add_subdirectory( GkgTestWatsonKappaFromAngularDispersion01 )


if ( SVM_FOUND )
  add_subdirectory( GkgTestSVM01 )
endif ( SVM_FOUND )
