################################################################################
# SOURCES
################################################################################

set( SOURCES
GkgSnapIt.py
)


################################################################################
# Installation
################################################################################

install( FILES ${SOURCES}
         DESTINATION share/${PROJECT_NAME}/scripts
         COMPONENT runtime )
